--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
 
 body {
   margin: 0;
-  line-height: 1.75;
   font-family: 'Fraunces', serif;
+}
+
+.image-fix{
+  height: 5rem;
+  width: 5rem;
+  margin-bottom: 1.5rem;
 }
