--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,10 @@ body {
   width: 5rem;
   margin-bottom: 1.5rem;
 }
+
+.header-image{
+  background-image: url('./components/header/image-header.jpg');
+  background-position: center;
+  background-size: cover;
+  min-height: 100vh;
+}
